// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartStopButton renderes isPomodoroActive=false 1`] = `
<button
  onClick={[MockFunction]}
>
  Start!
</button>
`;

exports[`StartStopButton renderes isPomodoroActive=true 1`] = `
<button
  onClick={[MockFunction]}
>
  Stop!
</button>
`;
